# ljmd

./: .gitignore  CMakeLists.txt  README.md
Benchmarcking_time/: time_force_optimization_108  time_force_optimization_2916  time_operation_optimization_108  time_operation_optimization_2916  time_start_plaincode_108  time_start_plaincode_2916
Obj-serial/: CMakeLists.txt
examples/: CMakeLists.txt  argon_108.inp  argon_2916.inp
include/: ljmd.h  mdlib.h
reports/: report_morse.md  report_opt.md
src/: energies.c  forces.c  input.c  ljmd.c  output.c  reading.c  utilities.c  verlet_ti.c
test/: CMakeLists.txt  Makefile  first_velverlet.cpp  forces.cpp  gtest.cpp  input_output.cpp  kinetic_energy.cpp  utilities.cpp
